--- a/02-task/index.html
+++ b/02-task/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.2.1/rxjs.umd.js"></script>
     <!-- <script src="./src/script.js"></script> -->
     
-    <script src="./src/SvgRenderer.js"></script>
+    <script src="./src/Chart.js"></script>
     <script src="./src/Path.js"></script>
     <script src="./src/emitter.js"></script>
 </body>
