--- a/02-task/index.html
+++ b/02-task/index.html
@@ -3,11 +3,31 @@
   <head>
   <title>D3 curves</title>
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>   
+    <div class="svg-container"></div> 
+    <div class="path-controls">
+        <h2>Settings:</h2>
+        <div>
+            <input type="checkbox" class="path-chbox" checked />
+            <input type="color" class="path-color" id="path1" data-id="0" value="#ffa500">
+            <label for="path1" class="path-label">Path 1</label>
+        </div>
+        <div>
+            <input type="checkbox" class="path-chbox" checked />
+            <input type="color" class="path-color" id="path2" data-id="1" value="#e600ff">
+            <label for="path2" class="path-label">Path 2</label>
+        </div>
+        <div>
+            <input type="checkbox" class="path-chbox" checked />
+            <input type="color" class="path-color" id="path3" data-id="2" value="#ffff00">
+            <label for="path3" class="path-label">Path 3</label>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.2.1/rxjs.umd.js"></script>
-        
+
     <script src="./src/Chart.js"></script>
     <script src="./src/Path.js"></script>
     <script src="./src/emitter.js"></script>
