add hide ability

--- a/02-task/index.html
+++ b/02-task/index.html
@@ -9,19 +9,19 @@
     <div class="svg-container"></div> 
     <div class="path-controls">
         <h2>Settings:</h2>
-        <div>
+        <div data-id="0">
             <input type="checkbox" class="path-chbox" checked />
-            <input type="color" class="path-color" id="path1" data-id="0" value="#ffa500">
+            <input type="color" class="path-color" id="path1" value="#ffa500">
             <label for="path1" class="path-label">Path 1</label>
         </div>
-        <div>
+        <div data-id="1">
             <input type="checkbox" class="path-chbox" checked />
-            <input type="color" class="path-color" id="path2" data-id="1" value="#e600ff">
+            <input type="color" class="path-color" id="path2" value="#e600ff">
             <label for="path2" class="path-label">Path 2</label>
         </div>
-        <div>
+        <div data-id="2">
             <input type="checkbox" class="path-chbox" checked />
-            <input type="color" class="path-color" id="path3" data-id="2" value="#ffff00">
+            <input type="color" class="path-color" id="path3" value="#ffff00">
             <label for="path3" class="path-label">Path 3</label>
         </div>
     </div>
@@ -31,4 +31,5 @@
     <script src="./src/Chart.js"></script>
     <script src="./src/Path.js"></script>
     <script src="./src/emitter.js"></script>
+    <script src="./src/eventHandler.js"></script>
 </body>
