add path random colors

--- a/02-task/index.html
+++ b/02-task/index.html
@@ -30,6 +30,7 @@
 
     <script src="./src/Chart.js"></script>
     <script src="./src/Path.js"></script>
-    <script src="./src/emitter.js"></script>
+    <script src="./src/helperFunctions.js"></script>
+    <script src="./src/main.js"></script>
     <script src="./src/eventHandler.js"></script>
 </body>
