temporary commit with todo

--- a/02-task/index.html
+++ b/02-task/index.html
@@ -6,10 +6,10 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>   
-    <div class="svg-container"></div> 
+    <div id="svg-container"></div> 
     <div class="path-controls">
         <h2>Settings:</h2>
-        <div data-id="0">
+        <!-- <div data-id="0">
             <input type="checkbox" class="path-chbox" checked />
             <input type="color" class="path-color" id="path1" value="#ffa500">
             <label for="path1" class="path-label">Path 1</label>
@@ -23,7 +23,7 @@
             <input type="checkbox" class="path-chbox" checked />
             <input type="color" class="path-color" id="path3" value="#ffff00">
             <label for="path3" class="path-label">Path 3</label>
-        </div>
+        </div> -->
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.2.1/rxjs.umd.js"></script>
